# webapp

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: build-image.yml  tests.yml
backend/: .env.example  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 114f34d6c5dc_initial_schema.py  27768895ca39_add_zenodo_env_to_model_versions.py  696a40582633_nullable_owner_and_source_on_model_.py  69ce2421547d_add_schema_version_to_model_versions.py  873a082f1585_add_is_admin_to_users.py  8ec085c16514_add_downloads_and_views_to_model_.py  9cbb44b7e82d_add_harvest_claims_and_oauth_dedup.py  c1a4e7f39b02_add_obsoleted_by_to_model_records.py  e85831a82a14_add_is_placeholder_to_model_versions.py  f2a9c6b1e3d4_add_variant_of_and_documented_by_to_.py
backend/app/: card.py  claim.py  config.py  db.py  deps.py  harvest.py  htr_united.py  http_retry.py  main.py  models.py  progress.py  slugs.py  storage.py  vocab.py  zenodo_client.py
backend/app/playground/: db.py  models.py  router.py  worker.py
backend/app/routers/: auth.py  meta.py  models.py
backend/app/schema/: NOTICE.md  v0.metadata.schema.json
backend/app/scripts/: manage_users.py
backend/tests/: conftest.py  test_claim.py  test_harvest_relations.py  test_playground.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: NOTICE.md
frontend/src/: App.vue  i18n.js  router.js
frontend/src/api/: client.js
frontend/src/assets/fonts/: NOTICE.md
frontend/src/components/: ModelAutocomplete.vue  WysiwygEditor.vue
frontend/src/composables/: useAuth.js
frontend/src/locales/: de.json  en.json  es.json  fr.json  it.json
frontend/src/styles/: NOTICE.md  main.css
frontend/src/utils/: authors.js  iso.js  modelUrl.js
frontend/src/views/: CatalogView.vue  HomeView.vue  LoginView.vue  ModelDetailView.vue  ModelFormView.vue  MyModelsView.vue  PlaygroundAdminView.vue  PlaygroundView.vue
runner/: Dockerfile  pyproject.toml
runner/app/: cache.py  inference.py  main.py  threads.py
