[project]
name = "htrmopo-app"
version = "0.1.1"
description = "Document, version and publish Kraken HTR/OCR models to Zenodo using the HTRMoPo scheme"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "authlib>=1.3",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "jsonschema[format]>=4.22",
    "pyyaml>=6.0",
    "markdown>=3.6",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2",
    "pydantic-settings>=2.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
