[project]
name = "htrmopo-playground-runner"
version = "0.1.0"
description = "Isolated kraken/D-Fine inference service for the HTRMoPo playground"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    # Verified 2026-07-23 against the real PyPI packages: kraken 7.0.2 is the
    # current release, and dfine_kraken 0.4.2 (imports as `dfine`, registers
    # itself via kraken's `kraken.models` plugin entry point) is the actual
    # D-Fine region-segmentation plugin -- "kraken-dfine" in an earlier draft
    # of this file did not exist on PyPI.
    "kraken~=7.0.2",
    "dfine_kraken~=0.4.2",
    # mittagessen/party registers `PartyModel` under the same `kraken.models`
    # entry point mechanism as dfine_kraken above -- needed to load any
    # recognition model file whose kraken_meta names that architecture.
    # There is NO usable PyPI release: "party" on PyPI is an unrelated
    # Artifactory API client, and the party project itself has never cut a
    # tagged release, so this installs straight from GitHub, pinned to the
    # latest commit on main as of 2026-07-23.
    "party @ git+https://github.com/mittagessen/party.git@c2589b1b515ed690f883c6afaef6c01ce29bf72d",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
